--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,46 @@
-target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
-.mvn/timing.properties
+# Compiled class file
+*.class
+target
+*-pom.xml
 
-# Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
-!/.mvn/wrapper/maven-wrapper.jar
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+#intellij
+
+*.iml
+.idea
+
+src/dev/resources/*.jks
+src/dev/resources/*.p12
+package-*.json
+node_modules
+/build
+
+# elm
+
+yarn.lock
+/elm-stuff
+
+# h2
+*.mv.db
+
+/examples
+pom.xml.versionsBackup
