--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,9 @@
     <name>specification-patterns</name>
     <url>http://www.myorganization.org</url>
 
+    <properties>
+        <spring-boot.version>2.5.3</spring-boot.version>
+    </properties>
     <build>
     <pluginManagement>
         <plugins>
@@ -45,9 +48,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.eclipse.persistence</groupId>
-            <artifactId>eclipselink</artifactId>
-            <version>2.7.4</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>${spring-boot.version}</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
